deploy-nxinx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-12.8-nginx
  labels:
    app: deployment-12.8-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-12.8-nginx
  template:
    metadata:
      labels:
        app: deployment-12.8-nginx
    spec:
      containers:
      - image: nginx:1.19.2
        name: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: nginx-conf
            mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
