service nginx-conf.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-deployment-12-8-nginx
  namespace: default
spec:
  selector:
    app: deployment-12.8-nginx
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    nodePort: 31150
  type: NodePort
