svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
spec:
  selector:
    app: deployment-12.8-nginx
  ports:
  - name: nginx
    port: 80
    nodePort: 31150
  type: NodePort
